# extended-float

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  justfile  rustfmt.toml
.cargo/: config.toml
.github/workflows/: rust.yml
benches/: bench_conversions.rs  bench_ops.rs
benches/common/: mod.rs  random.rs
benchmark/: Cargo.toml
benchmark/benches/: conversions.rs  ops.rs
benchmark/benches/common/: criterion_conf.rs  files.rs  mod.rs  random.rs
benchmark_iai_callgrind/: Cargo.toml
benchmark_iai_callgrind/.cargo/: config.toml
benchmark_iai_callgrind/benches/: conversions.rs
examples/: operators.rs
src/: lib.rs  test_format.rs  utils.rs
src/constants/: f64.rs
src/impls/: f64.rs
src/tables/: lookup.rs
src/traits/: checked_float_ops.rs  displayable_float.rs  float.rs  mod.rs  option_eq.rs
src/types/: extended_float.rs  mod.rs
src/types/extended_float/: impl_checked_ops.rs  impl_conversions.rs  impl_display.rs  impl_eq.rs  impl_ops.rs  impl_option_eq.rs  impl_ord.rs  mod.rs  structs.rs
