[package]
name = "extended_float"
version = "0.1.0"
edition = "2024"
authors = ["Ivan Gureev"]
description = "Extended floating-point number implementation for Rust"
license = "MIT"
repository = "https://github.com/varche1/extended_float"
keywords = ["float", "math", "numerical", "decimal", "IEEE 754"]
categories = ["science", "mathematics"]

[dependencies]
num-traits = "0.2"
ryu = "1"
dtoa = "1"

[dev-dependencies]
pretty_assertions = "^1"
criterion = "^0.5"
fastnum = "^0.2"
rust_decimal = "^1.37"
rand = "^0.9"

[[bench]]
name = "bench_ops"
harness = false
path = "benches/bench_ops.rs"

[[bench]]
name = "bench_conversions"
harness = false
path = "benches/bench_conversions.rs"

[[test]]
name = "bench_utils_test"
path = "benches/common/random.rs"

[features]
default = []
comparison_bench = []
