[package]
name = "extended_float"
version = "0.1.0"
edition = "2024"
authors = ["Ivan Gureev"]
description = "Extended floating-point number implementation for Rust"
license = "MIT"
homepage = "https://github.com/varche1/extended_float"
repository = "https://github.com/varche1/extended_float"
readme = "README.md"
keywords = ["float", "math", "numerical", "numeric", "decimal", "IEEE 754", "fixed-point",]
categories = ["science", "mathematics"]
autobenches = false
exclude = ["examples/*", "benchmark/*"]

[lib]
bench = false

[dependencies]
num-traits = "0.2"

[dev-dependencies]
pretty_assertions = "^1"
rand = "^0.9"

[profile.release]
lto = true # enable link-time optimisation for faster runtime, but slower compile time
opt-level = 3 # maximum optimisation level for faster runtime, but slower compile time
